--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "import requests\n",
     "zenodo_file_url = 'https://zenodo.org/records/10391170/files/spin_population.pt?download=1'\n",
-    "output_filename = 'Models/spin_population/spin_population.pt'\n",
+    "output_filename = home_dir + 'Models/spin_population/spin_population.pt'\n",
     "response = requests.get(zenodo_file_url, stream=True)\n",
     "\n",
     "# Check if the download was successful\n",
@@ -105,7 +105,7 @@
     "    print(f\"Failed to download. Status code: {response.status_code}\")\n",
     "\n",
     "zenodo_file_url = 'https://zenodo.org/records/10391170/files/triplet_energy.pt?download=1'\n",
-    "output_filename = 'Models/triplet_energy/triplet_energy.pt'\n",
+    "output_filename = home_dir + 'Models/triplet_energy/triplet_energy.pt'\n",
     "response = requests.get(zenodo_file_url, stream=True)\n",
     "\n",
     "# Check if the download was successful\n",
