--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -38,23 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "import sys\n",
     "import pandas as pd\n",
     "\n",
-    "home_dir = r'/YOUR_PATH/EnT_Substrate_Mapping/' #Change this to the directory your project is located at.\n",
+    "home_dir = r'C:\\Users\\leons\\PycharmProjects\\EnT_Substrate_Mapping\\\\' #Change this to the directory your project is located at.\n",
     "sys.path.append(home_dir) #Add the directory to your pythonpath, so that the functions from Combinatorial.help_to_combine can be imported.\n",
     "from CombinatorialSpace.help_to_combine import get_functional_groups, create_space\n",
     "\n",
     "path_to_fg_list = home_dir + r'/CombinatorialSpace/functional_groups.txt' #This file contains the functional groups that can be added to the core. You can add your own functional groups to this file.\n",
     "functional_groups = get_functional_groups(path_to_fg_list)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -65,8 +65,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "smiles = 'C1=CC=CS1'\n",
     "ring_class = 'thiophene'\n",
@@ -76,7 +74,9 @@
     "df = pd.DataFrame(data={'smiles': virtual_space})\n",
     "df.to_csv(home_dir + f'/Data/virtual_libraries/{ring_class}_{substitution}.csv', index=False, columns=['smiles'])"
    ],
-   "id": "eddcce8601f616e4"
+   "id": "eddcce8601f616e4",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -87,8 +87,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import requests\n",
     "zenodo_file_url = 'https://zenodo.org/records/10391170/files/spin_population.pt?download=1'\n",
@@ -117,7 +115,9 @@
     "else:\n",
     "    print(f\"Failed to download. Status code: {response.status_code}\")"
    ],
-   "id": "6e33145660c25af"
+   "id": "6e33145660c25af",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -128,8 +128,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import contextlib\n",
     "import chemprop\n",
@@ -151,7 +149,9 @@
     "    args = chemprop.args.PredictArgs().parse_args(arguments)\n",
     "    preds = chemprop.train.make_predictions(args=args)"
    ],
-   "id": "42c1e4de186e6c50"
+   "id": "42c1e4de186e6c50",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -162,8 +162,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import time\n",
     "import torch\n",
@@ -183,7 +181,7 @@
     "path_for_predictions = home_dir + f'Data/sp_predictions/predictions_{ring_class}_{substitution}.csv'\n",
     "\n",
     "# ----------------------------------- Data Preprocessing -----------------------\n",
-    "device = \"cuda:0\" # Change this to \"cpu\" if you don't have a GPU available.\n",
+    "device = \"cpu\" # Change this to \"cpu\" if you don't have a GPU available.\n",
     "\n",
     "###Do not change the following parameters unless you train a new model with different parameters\n",
     "d_model = 512\n",
@@ -213,7 +211,7 @@
     "\n",
     "# ----------------------------------- Evaluation -----------------------\n",
     "\n",
-    "batch_size = 25\n",
+    "batch_size = 5\n",
     "decoding_strategy = 'greedy'\n",
     "\n",
     "s = SmilesTokenzier()\n",
@@ -279,7 +277,76 @@
     "\n",
     "    final_df.to_csv(path_for_predictions, index=False)"
    ],
-   "id": "cf63c03361a23ad5"
+   "id": "cf63c03361a23ad5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Now we generate the images for the spin density maps. For this we use the RDKit library. The images are saved in the folder Data/images.",
+   "id": "d778f91e63b560c3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import AllChem\n",
+    "from rdkit.Chem.Draw import SimilarityMaps\n",
+    "from rdkit.Chem import Draw\n",
+    "\n",
+    "type_of_image = 'spin_population' # Options are structure or 'spin_population'\n",
+    "                            # Caveat of spin_population is that the memory for the generation for the images can overflow and crash the script.\n",
+    "                            # In this case the script needs to be run in smaller batches.\n",
+    "\n",
+    "data_path = home_dir + f'/Data/virtual_libraries/{ring_class}_{substitution}.csv'\n",
+    "picFolder_path = home_dir + '/Data/images'\n",
+    "#Only required for spin_density images:\n",
+    "sp_path = home_dir + f'/Data/sp_predictions/predictions_{ring_class}_{substitution}.csv'\n",
+    "\n",
+    "df = pd.read_csv(data_path)\n",
+    "\n",
+    "if not os.path.exists(picFolder_path):\n",
+    "    os.mkdir(picFolder_path)\n",
+    "\n",
+    "if type_of_image == 'structure':\n",
+    "    for smi in df.smiles.to_list():\n",
+    "        d = Draw.rdMolDraw2D.MolDraw2DCairo(512, 512)\n",
+    "        d.drawOptions().rotate = 0\n",
+    "        d.drawOptions().bondLineWidth = 1\n",
+    "        d.DrawMolecule(Chem.MolFromSmiles(smi))\n",
+    "        d.FinishDrawing()\n",
+    "        idx = df[df['smiles'] == smi].index.to_numpy()[0]\n",
+    "        d.WriteDrawingText(f\"{picFolder_path}/{idx}.jpeg\")\n",
+    "\n",
+    "elif type_of_image == 'spin_population':\n",
+    "    sp_data = pd.read_csv(sp_path)\n",
+    "    for i in range(len(sp_data)):\n",
+    "        smi = sp_data.True_smiles.to_list()[i]\n",
+    "        sp_list = sp_data.DensityArray.to_list()[i]\n",
+    "        string_list = sp_list.strip('[]')\n",
+    "        string_elements = string_list.split()\n",
+    "        sp_list = [int(element) for element in string_elements]\n",
+    "        m = Chem.MolFromSmiles(smi)\n",
+    "        densities = np.array(sp_list)\n",
+    "        count = df[df['smiles'] == smi].index.to_numpy()[0]\n",
+    "        fig = SimilarityMaps.GetSimilarityMapFromWeights(m,\n",
+    "                                                         densities,\n",
+    "                                                         colorMap='coolwarm',\n",
+    "                                                         contourLines=10,\n",
+    "                                                         colors='grey')\n",
+    "        fig.savefig(f\"{picFolder_path}/{ring_class}_{substitution}/{count}.jpeg\",\n",
+    "                    bbox_inches='tight',\n",
+    "                    dpi=600)\n",
+    "        fig.clear()"
+   ],
+   "id": "39664729669c264c",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -300,8 +367,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "threshold = 62 # Here we can define our triplet energy threshold\n",
     "\n",
@@ -351,7 +416,9 @@
     "interesting_data = interesting_data[interesting_data['Density_on_core'] == 1]\n",
     "interesting_data.to_csv(path_to_save_candidates)"
    ],
-   "id": "2ea6bdb8a42210b9"
+   "id": "2ea6bdb8a42210b9",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -362,10 +429,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "interesting_data",
-   "id": "12e94f68530c132e"
+   "id": "12e94f68530c132e",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -376,8 +443,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import base64\n",
     "import os, dash, glob\n",
@@ -585,7 +650,9 @@
     "\n",
     "app.run_server(mode='external')"
    ],
-   "id": "1ac5da84305d6383"
+   "id": "1ac5da84305d6383",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
