--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -304,7 +304,9 @@
     "                            # In this case the script needs to be run in smaller batches.\n",
     "\n",
     "data_path = home_dir + f'/Data/virtual_libraries/{ring_class}_{substitution}.csv'\n",
-    "picFolder_path = home_dir + '/Data/images'\n",
+    "picFolder_path = home_dir + f'/Data/images/{ring_class}_{substitution}'\n",
+    "if not os.path.exists(picFolder_path):\n",
+    "    os.makedirs(picFolder_path)\n",
     "#Only required for spin_density images:\n",
     "sp_path = home_dir + f'/Data/sp_predictions/predictions_{ring_class}_{substitution}.csv'\n",
     "\n",
