--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -372,8 +372,8 @@
    "source": [
     "threshold = 62 # Here we can define our triplet energy threshold\n",
     "\n",
-    "path_to_et_datafile = fr'Data/et_predictions/predictions_{ring_class}_{substitution}.csv'\n",
-    "path_to_sp_datafile = fr'Data/sp_predictions/predictions_{ring_class}_{substitution}.csv'\n",
+    "path_to_et_datafile = home_dir + fr'Data/et_predictions/predictions_{ring_class}_{substitution}.csv'\n",
+    "path_to_sp_datafile = home_dir + fr'Data/sp_predictions/predictions_{ring_class}_{substitution}.csv'\n",
     "path_to_save_candidates = home_dir + f'Data/potential_candidates_{ring_class}_{substitution}.csv'\n",
     "\n",
     "#--------------Load the data, and check if the maximum spin density is located on the core-------------------#\n",
