--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -14,6 +14,15 @@
     "5. Visualize the results using an interactive analysis\n",
     "\n",
     "In order to run this notebook, you need to have cloned this repository and installed the required packages\n",
+    "git clone --recurse-submodules https://github.com/le-schlo/EnT_Substrate_Mapping.git\n",
+     "\n",
+     "pip install -r requirements.txt\n",
+     "\n",
+     "#Additionally you need to go to the EasyChemML directory and install the necessary dependencies separately.\n",
+     "cd EnTdecker/EasyChemML\n",
+     "pip install ./\n",
+     "```\n",
+     "The installation on a standard Linux machine takes approx. 2-3 minutes."
    ],
    "id": "40ecb5f287dd8dc6"
   },
