--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -14,6 +14,9 @@
     "5. Visualize the results using an interactive analysis\n",
     "\n",
     "In order to run this notebook, you need to have cloned this repository and installed the required packages\n",
+    "git clone --recurse-submodules https://github.com/le-schlo/EnT_Substrate_Mapping.git\n",
+     "\n",
+     "```\n",
    ],
    "id": "40ecb5f287dd8dc6"
   },
