--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -13,10 +13,7 @@
     "4. Use an automated analysis to find the most promising candidates\n",
     "5. Visualize the results using an interactive analysis\n",
     "\n",
-    "In order to run this notebook, you need to have cloned this repository and installed the required packages\n",
-    "git clone --recurse-submodules https://github.com/le-schlo/EnT_Substrate_Mapping.git\n",
-     "\n",
-     "```\n",
+    "In order to run this notebook, you need to have cloned this repository and installed the required packages"
    ],
    "id": "40ecb5f287dd8dc6"
   },
