--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -331,7 +331,7 @@
     "                                                         colorMap='coolwarm',\n",
     "                                                         contourLines=10,\n",
     "                                                         colors='grey')\n",
-    "        fig.savefig(f\"{picFolder_path}/{ring_class}_{substitution}/{count}.jpeg\",\n",
+    "        fig.savefig(f\"{picFolder_path}/{count}.jpeg\",\n",
     "                    bbox_inches='tight',\n",
     "                    dpi=600)\n",
     "        fig.clear()"
