--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -640,7 +640,7 @@
     "            style={'width': '85%', 'height': 'auto', 'display': 'block', 'margin': 'auto'}\n",
     "        )\n",
     "\n",
-    "app.run_server(mode='external')"
+    "app.run(jupyter_mode='external')"
    ],
    "id": "1ac5da84305d6383",
    "outputs": [],
