--- a/examples/interactive_analysis.ipynb
+++ b/examples/interactive_analysis.ipynb
@@ -284,8 +284,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "app.run(jupyter_mode=\"tab\")\n",
-    "#app.run_server(mode='inline')"
+    "app.run(jupyter_mode='external')"
    ],
    "id": "30f8f949f4d2ebd5"
   }
