--- a/examples/full_workflow.ipynb
+++ b/examples/full_workflow.ipynb
@@ -36,7 +36,7 @@
     "import sys\n",
     "import pandas as pd\n",
     "\n",
-    "home_dir = r'\\YOUR_PATH\\EnT_Substrate_Mapping\\\\' #Change this to the directory your project is located at.\n",
+    "home_dir = r'/path/to/project_directory/' #Change this to the directory your project is located at. Make sure to have a trailing slash.\n",
     "sys.path.append(home_dir) #Add the directory to your pythonpath, so that the functions from Combinatorial.help_to_combine can be imported.\n",
     "from CombinatorialSpace.help_to_combine import get_functional_groups, create_space\n",
     "\n",
