--- a/examples/interactive_analysis.ipynb
+++ b/examples/interactive_analysis.ipynb
@@ -47,7 +47,7 @@
     "substitution = 'monosubstituted'\n",
     "representation = 'ECFP' # Available options are ECFP, MACCS, MACCS+ECFP\n",
     "\n",
-    "home_dir = r'\\YOUR_PATH\\EnT_Substrate_Mapping\\\\'\n",
+    "home_dir = r'/path/to/project_directory/' #Change this to the directory your project is located at. Make sure to have a trailing slash.\n",
     "\n",
     "picFolder_path = home_dir + 'Data/images' #Important: The names of the files in the folder must be the index of the molecules in the data_path!\n",
     "data_path = home_dir + f'Data/virtual_libraries/{ring_class}_{substitution}.csv'\n",
