--- a/examples/interactive_analysis.ipynb
+++ b/examples/interactive_analysis.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "home_dir = r'/path/to/project_directory/' #Change this to the directory your project is located at. Make sure to have a trailing slash.\n",
     "\n",
-    "picFolder_path = home_dir + 'Data/images' #Important: The names of the files in the folder must be the index of the molecules in the data_path!\n",
+    "picFolder_path = home_dir + f'Data/images/{ring_class}_{substitution}' #Important: The names of the files in the folder must be the index of the molecules in the data_path!\n",
     "data_path = home_dir + f'Data/virtual_libraries/{ring_class}_{substitution}.csv'\n",
     "e_t_path = home_dir + f'Data/et_predictions/predictions_{ring_class}_{substitution}.csv'\n"
    ]
